--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
         </div>
           </a>
           <!--blog-->
-          <a class="link-wrapper" href="blog.html">
+          <a class="link-wrapper" href="zonelets/blog.html">
         <span class="fallback">Blog</span>
         <div class="img-wrapper">
           <img class="normal" src="images/menu/blognormal.png">
@@ -353,7 +353,7 @@
         </div>
           </a>
           <!--archive-->
-          <a class="link-wrapper" href="archive.html">
+          <a class="link-wrapper" href="zonelets/archive.html">
         <span class="fallback">Archive</span>
         <div class="img-wrapper">
           <img class="normal" src="images/menu/archivenormal.png">
@@ -450,4 +450,5 @@
     <br>
     © 2024 Yolia ☆
   </footer>
+  <script src="./script.js"></script>
 </html>
