--- a/index.html
+++ b/index.html
@@ -121,14 +121,14 @@
       background-size: cover;
       background-repeat: no-repeat;
       padding-left: 20px;
-      font-size: 25px;
+      font-size: 20px;
       border: 10px solid transparent;
       border-image: url(images/border5.jpg) 20 stretch;
       border-image-repeat: round;
       border-bottom: none;
-      display: flex; /* Enables flexbox */
+      display: flex;
       align-items: center; /* Aligns items vertically */
-      gap: 36px;
+      gap: 31px;
       position: relative;
     }
 
@@ -213,20 +213,20 @@
     }
 
     #update-log {
-      background-color: #f0f0f0;
+      background-color: #eed7e7;
       border-radius: 10px;
       padding: 20px;
       margin: 20px 0;
       box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-      width: 200px;
-      height: 200px;
+      width: 130px;
+      height: 150px;
       overflow: auto;
     }
 
     #update-log h2 {
       font-size: 24px;
       margin-bottom: 15px;
-      color: #333;
+      color: #5c086e;
     }
 
     #update-log ul {
@@ -235,7 +235,7 @@
     }
 
     #update-log ul li {
-      background-color: #fff;
+      background-color: #f2e5ef;
       padding: 10px;
       margin-bottom: 10px;
       border-radius: 8px;
@@ -245,7 +245,7 @@
     }
 
     #update-log ul li:hover {
-      background-color: #f0f0f0;
+      background-color: #eed7e7;
     }
 
     #update-log strong {
@@ -253,6 +253,17 @@
       font-weight: bold;
     }
 
+    #statuscafe {
+    padding: .5em;
+    background-color: azure;
+    border: 1px solid midnightblue;
+    }
+    #statuscafe-username {
+        margin-bottom: .5em;
+    }
+    #statuscafe-content {
+        margin: 0 1em 0.5em 1em;
+    }
 
     .footer{
       width: 100%; /* Stretch across the entire width of the viewport */
@@ -430,7 +441,7 @@
           <div>
             <img src="images/menu/cutegirl.gif" alt="image_not_displayed" height="100px">
           </div>
-          <h1 id="heading">print("Hello world!")</h1>
+          <h1 id="heading">✧.* VelvetRoomVibes ༊*·˚</h1>
           <div>
             <img src="images/home/phantom.png" alt="image_not_displayed" height="120px">
           </div>
@@ -463,6 +474,11 @@
         </div>
         <div id="content">
           <div id="box1" class="navbar">
+
+            <div>
+              <img src="images/menu/computergirl.jpg" alt="image_not_displayed" height="215px">
+            </div>
+
             <!--about-->
             <a class="link-wrapper" href="about.html">
           <span class="fallback">About</span>
@@ -554,11 +570,24 @@
           </div>
             </a>
 
-            <div>
-              <form method="post" action="https://poll.pollcode.com/79194855"><div style="background-color:#D4A3C4;padding:2px;width:175px;font-family:Tahoma;font-size:small;color:#400040;box-shadow: 0px 0px 5px #888;background-image: url('https://images.boardhost.com/bg/flowers.gif');"><div style="padding:2px 0px 4px 2px;"><strong>What’s the best all time Persona battle theme?</strong></div><input type="checkbox" name="answer" value="1" id="answer791948551" style="float:left;" /><label for="answer791948551" style="float:left;width:150px;">Mass Destruction</label><div style="clear:both;height:2px;"></div><input type="checkbox" name="answer" value="2" id="answer791948552" style="float:left;" /><label for="answer791948552" style="float:left;width:150px;">It's Going Down Now</label><div style="clear:both;height:2px;"></div><input type="checkbox" name="answer" value="3" id="answer791948553" style="float:left;" /><label for="answer791948553" style="float:left;width:150px;">Reach Out to the Truth</label><div style="clear:both;height:2px;"></div><input type="checkbox" name="answer" value="4" id="answer791948554" style="float:left;" /><label for="answer791948554" style="float:left;width:150px;">Time to Make History</label><div style="clear:both;height:2px;"></div><input type="checkbox" name="answer" value="5" id="answer791948555" style="float:left;" /><label for="answer791948555" style="float:left;width:150px;">The Almighty</label><div style="clear:both;height:2px;"></div><input type="checkbox" name="answer" value="6" id="answer791948556" style="float:left;" /><label for="answer791948556" style="float:left;width:150px;">Take Over</label><div style="clear:both;height:2px;"></div><input type="checkbox" name="answer" value="7" id="answer791948557" style="float:left;" /><label for="answer791948557" style="float:left;width:150px;">Last Surprise</label><div style="clear:both;height:2px;"></div><input type="checkbox" name="answer" value="8" id="answer791948558" style="float:left;" /><label for="answer791948558" style="float:left;width:150px;">Other</label><div style="clear:both;height:2px;"></div><div align="center" style="padding:3px;"><input type="submit" value=" Vote ">&nbsp;<input type="submit" name="view" value=" View "></div><div align="right" style="font-size:10px">pollcode.com <a href="https://pollcode.com/">free polls</a></div></div></form>
-              <br>
-              <img src="images/menu/computergirl.jpg" alt="image_not_displayed" height="215px">
-            </div>
+            <section id="update-log">
+              <h2>Update Log</h2>
+              <ul>
+                <li>
+                  <strong>30-03-2025:</strong> Fixed some minor CSS bugs in the footer layout.
+                </li>
+                <li>
+                  <strong>25-03-2025:</strong> Redesigned the homepage with a new theme and layout.
+                </li>
+                <li>
+                  <strong>15-03-2025:</strong> Launched the guestbook feature on the site.
+                </li>
+                <li>
+                  <strong>04-10-2025:</strong> Edited the homepage layout a bit.
+                </li>
+              </ul>
+            </section>
+
           </div>
           <div id="box2">
             <div>
@@ -571,61 +600,62 @@
               <img src="images/home/upper.gif" width="12%">
             </div>
             <div>
-                Hi, welcome to ✧.* VelvetRoomVibes ༊*·˚! I'm Yolia, a final-year Physics student who enjoys coding, anime, art, music and gaming. This site is my little creative hub where I share my coding projects and anything else that sparks my curiosity! I'm building this site from scratch using HTML, CSS, and a bit of JavaScript — learning as I go! It’s a work in progress, but that’s the fun part, right? I am still learning how to make this website look functional and pretty ♡
+                Hi, welcome to VelvetRoomVibes! I'm Yolia, a 20-something friendless girl who enjoys coding, anime, art, music and gaming. This site is my little personal creative hub where I'm going to try and start posting blogs and maybe some art? I'm building this site from scratch using HTML, CSS, and a bit of JavaScript — learning as I go! It’s a work in progress, but that’s the fun part, right? I am still learning how to make this website look functional and pretty ♡ &nbsp; &nbsp; &nbsp; &nbsp; Status updates:
+              <a href="https://status.cafe/users/yolia"><img src="https://status.cafe/users/yolia/badge.png" alt="Status Cafe Profile"/></a>
+
+
             </div>
 
             <h3 id="heading">*•̩̩͙✩•̩̩͙*˚＊*•̩̩͙✩•̩̩͙*˚Explore My Website ˚*•̩̩͙✩•̩̩͙*˚＊˚*•̩̩͙✩•̩̩͙*˚</h3>
             About: Find out more about me if you'd like ♡
             <br>
-            Blog: Read about my experiences, coding projects, thoughts on  and more
+            Blog: Read about my thoughts on random topics and more
             <br>
             Credits: Places I've taken inspiration from to make this website
             <br>
             There's also a guestbook where you can leave a message!
             <br>
-            Thanks for stopping by! Feel free to explore and say hi! yolias628@gmail.com
+            Thanks for stopping by!
+            <br>
+            Feel free to explore and reach out if you'd like a new friend or to just chat! :)
+            <br>
+            Discord: zxltrxn6bil (miss_himeko_murata ♡) &nbsp; &nbsp; &nbsp; Email: yolias628@gmail.com
+            <br>
             <br>
             <img src="images/home/food.gif" width="95%">
-            <br>
-            Feel free to explore and reach out if you'd like to collaborate or to just chat! :) yolias628@gmail.com <br>
 
+             <div id="chatbox">
+              <iframe src="https://www5.cbox.ws/box/?boxid=956043&boxtag=eSYioI" width="100%" height="190" allowtransparency="yes" allow="autoplay" frameborder="0" marginheight="0" marginwidth="0" scrolling="auto"></iframe>
+            </div>
+
+            <!-- moving character gifs -->
             <img src="https://64.media.tumblr.com/4554d651daa52054ef9ca5a1d92b3734/tumblr_of8vtqIOmA1sdttu1o1_1280.gif" style="height:209px;position:absolute;right: 130px;top:20px;">
 
             <img src="images/home/margret.gif" style="height:209px;position:absolute;left:100px;top: 320px; z-index: 9999;;">
 
-            <iframe width="314" height="321" scrolling="no" src="https://gifypet.neocities.org/pet/pet.html?name=Aiko&dob=1743586289&gender=f&element=Water&pet=anime.gif&map=tree.jpg&background=https%3A%2F%2Fi.pinimg.com%2F736x%2F50%2Fbb%2Fe5%2F50bbe581b24669a70371b6385818fa7d.jpg&tablecolor=white&textcolor=black" frameborder="0"></iframe>
-            <section id="update-log">
-              <h2>Update Log</h2>
-              <ul>
-                <li>
-                  <strong>2025-04-02:</strong> Added new blog post about my latest project!
-                </li>
-                <li>
-                  <strong>2025-03-30:</strong> Fixed some minor CSS bugs in the footer layout.
-                </li>
-                <li>
-                  <strong>2025-03-25:</strong> Redesigned the homepage with a new theme and layout.
-                </li>
-                <li>
-                  <strong>2025-03-15:</strong> Launched the guestbook feature on the site.
-                </li>
-              </ul>
-            </section>
-
-
-            <a href="https://www.imood.com/imood"><img src="https://moods.imood.com/internet/current.gif"  alt="The current mood of the Internet at www.imood.com" border="0">The current mood of the Internet</a>
-            <a href="https://www.imood.com/users/yolia"><img src="https://moods.imood.com/display/uname-yolia/fg-ff66b2/trans-1/imood.gif" alt="The current mood of yolia at www.imood.com" border="0"></a>
           </div>
+
           <div id="box3">
             <div id="futaba">
               <img src="images/home/futabalaptop.jpg" alt="image_not_displayed" height="170px" width="170px">
             </div>
-            <div id="chatbox">
-              <h2>Guestbook</h2>
-              <p>To post a message, click in the boxes below and type!</p>
-              <iframe src="https://www5.cbox.ws/box/?boxid=956043&boxtag=eSYioI" width="100%" height="300" allowtransparency="yes" allow="autoplay" frameborder="0" marginheight="0" marginwidth="0" scrolling="auto"></iframe>
+
+            <div id="poll">
+              <form method="post" action="https://poll.pollcode.com/79194855"><div style="background-color:#D4A3C4;padding:2px;width:175px;font-family:Tahoma;font-size:small;color:#400040;box-shadow: 0px 0px 5px #888;background-image: url('https://images.boardhost.com/bg/flowers.gif');"><div style="padding:2px 0px 4px 2px;"><strong>What’s the best all time Persona battle theme?</strong></div><input type="checkbox" name="answer" value="1" id="answer791948551" style="float:left;" /><label for="answer791948551" style="float:left;width:150px;">Mass Destruction</label><div style="clear:both;height:2px;"></div><input type="checkbox" name="answer" value="2" id="answer791948552" style="float:left;" /><label for="answer791948552" style="float:left;width:150px;">It's Going Down Now</label><div style="clear:both;height:2px;"></div><input type="checkbox" name="answer" value="3" id="answer791948553" style="float:left;" /><label for="answer791948553" style="float:left;width:150px;">Reach Out to the Truth</label><div style="clear:both;height:2px;"></div><input type="checkbox" name="answer" value="4" id="answer791948554" style="float:left;" /><label for="answer791948554" style="float:left;width:150px;">Time to Make History</label><div style="clear:both;height:2px;"></div><input type="checkbox" name="answer" value="5" id="answer791948555" style="float:left;" /><label for="answer791948555" style="float:left;width:150px;">The Almighty</label><div style="clear:both;height:2px;"></div><input type="checkbox" name="answer" value="6" id="answer791948556" style="float:left;" /><label for="answer791948556" style="float:left;width:150px;">Take Over</label><div style="clear:both;height:2px;"></div><input type="checkbox" name="answer" value="7" id="answer791948557" style="float:left;" /><label for="answer791948557" style="float:left;width:150px;">Last Surprise</label><div style="clear:both;height:2px;"></div><input type="checkbox" name="answer" value="8" id="answer791948558" style="float:left;" /><label for="answer791948558" style="float:left;width:150px;">Other</label><div style="clear:both;height:2px;"></div><div align="center" style="padding:3px;"><input type="submit" value=" Vote ">&nbsp;<input type="submit" name="view" value=" View "></div><div align="right" style="font-size:10px">pollcode.com <a href="https://pollcode.com/">free polls</a></div></div></form>
+              <br>
             </div>
+
+            <p> The current mood of the Internet is:
+              <a href="https://www.imood.com/imood"><img src="https://moods.imood.com/internet/current.gif"  alt="The current mood of the Internet at www.imood.com" border="0"></a>
+            </p>
+
+            <div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=yolia" defer></script>
+
+
+            <a href="https://ac.kuchiki.net/" target="new"><img src="imgurl" title="pixel friends | NAME"></a>
+
           </div>
+
         </div>
 
 
