--- a/zonelets/blog.html
+++ b/zonelets/blog.html
@@ -20,7 +20,11 @@
 
       <h1>Welcome to my 'Byte Sized Adventures'!</h1>
 
-      <p>I hope you enjoy your time here!</p>
+      <div id="box">
+        <p>I hope you enjoy your time here!</p>
+
+        <iframe width="314" height="321" scrolling="no" src="https://gifypet.neocities.org/pet/pet.html?name=Aiko&dob=1743586289&gender=f&element=Water&pet=anime.gif&map=tree.jpg&background=https%3A%2F%2Fi.pinimg.com%2F736x%2F50%2Fbb%2Fe5%2F50bbe581b24669a70371b6385818fa7d.jpg&tablecolor=white&textcolor=black" frameborder="0"></iframe>
+      </div>
 
 
       <div id="recentpostlistdiv"></div>
