--- a/credits.html
+++ b/credits.html
@@ -159,6 +159,9 @@
       <div>3</div>
       <div>4</div>
     </section>
-    <p>inspiration https://www.w3schools.com/ images taken from my own pinterest board https://uk.pinterest.com/ZXLTRXN6Bil/website-design-ideas/ font generator from https://www.fontbolt.com/font/persona-5-font/ nav bar inspo from https://codepen.io/kevinquach/pen/JNGmKG p5 dialogue generator www.p5generator.com profile pic from picrow generator symbols from https://www.cutesymbols.net </p>
+    <p>inspiration https://www.w3schools.com/ images taken from my pinterest board https://uk.pinterest.com/ZXLTRXN6Bil/website-design-ideas/ font generator from https://www.fontbolt.com/font/persona-5-font/ nav bar inspo from https://codepen.io/kevinquach/pen/JNGmKG p5 dialogue generator www.p5generator.com profile pic from picrow generator symbols from https://www.cutesymbols.net
+      <br>
+      https://picrew.me/en/image_maker/94097/complete?cd=pnYOKmHkQ0
+    </p>
   </body>
 </html>
