--- a/zonelets/about.html
+++ b/zonelets/about.html
@@ -1,23 +1,94 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>About Zonelets</title>
+    <title>LunaFae | About Me - Neocities</title>
     <link rel="icon" href="./images/favicon.png" type="image/x-icon"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <link href="./style/style.css" rel="stylesheet" type="text/css" media="all">
+    <link href="./style/about_style.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
     <div id="container">
-    <div id="header_nav">...</div>
-    <div id="content">
+      <div id="header_nav">...</div>
+      <div id="content">
 
-      <h1>About</h1>
-      <p>[Under Construction!]</p>
+        <div class="about-container">
 
-    </div> <!-- end of div id="content" -->
-    <div id="footer"></div>
-    </div> <!-- end of div id="container" -->
+        <div class="about-left">
+
+          <div class="box" style="height:180px; width:237px; margin-top:3px;">
+
+            <img src="/images/about_page/profile.png" style="border-radius:0px 10px; border:1px white solid; display:block; margin-left:auto;">
+
+          </div>
+
+          <div class="playlist-box">
+            playlist here
+          </div>
+
+        </div>
+
+        <div class="about-right">
+
+          <div class="box" style="font-family: Persona5Menu; color:white">
+              <h1>PHANTOM THIEF | LunaFae</h1>
+          </div>
+
+          <div class="box">
+            Hi, I'm LunaFae and I'm the creator of this site! I'm a 20-something friendless girl who enjoys art, music, gaming and anime. I started making this site in early 2025 and I want my website to become a little personal creative hub where I'm going to try and start posting blogs and maybe some art? I want to be more creative in my life since it's good for my mental health and being creative genuinely makes me happy. I also want to share my art with people too. I hope that whoever comes across my website can appreciate and enjoy my work and maybe I could make some new friends with similar interests to me in this way? Who knows lol but either way, if you're reading this, I'm happy you're alive and may my humble abode on the Internet be a source of comfort and coziness to you! Anyway here's some random facts about me below lol
+            <br>
+            Likes: personaaa, all my hobbies, music, being a plant mom
+            <br>
+            Dislikes: loud or mean people
+            <br>
+            Mbti: infj
+            <br>
+            Star sign: cancer
+            <br>
+            Birthstone: Ruby
+            <br>
+            Hobbies: drawing, gaming, coding, watching anime, listening to music, making playlists, gardening, pinterest boards, skincare, watching movies, notion, watching joseph anderson streams, reading books, reading webtoons, daydreaming, cooking (sometimes...)
+            <br>
+            Fav music:
+            <br>
+            Fav colours: pink, blue and yellow
+            <br>
+            Fav anime: bungou stray dogs, moriarty the patriot, my new boss is goofy, a silent voice, the tunnel to summer
+            <br>
+            Animals: cats and bunnies and anything floofy/cute
+            <br>
+            Food: all of it lol
+            <br>
+            Drink: boba tea, juice, water, coffee and vegan chocolate milk (im not vegan lol i just like the taste)
+            <br>
+            Currently...
+            <br>
+            Listening: Breach - Twenty One Pilots
+            <br>
+            Playing: 1000xResist and Persona 5X: The Phantom
+            <br>
+            Writing: Lots of code lol
+            <br>
+            Studying: Flask and JavaScript
+            <br>
+            Feeling: Veryyyy determined to get a job lol
+          </div>
+
+          <br>
+
+          <div class="gif-box">
+            <p>Persona gifs here 💖</p>
+          </div>
+
+        </div>
+
+        </div>
+
+      </div>
+
+      </div>
+    </div>
+
   <script src="./script.js"></script>
   </body>
 </html>
