--- a/index.html
+++ b/index.html
@@ -429,10 +429,17 @@
 
   <body>
 
-    <audio autoplay loop>
-      <source src="/persona5dancing.mp3" type="audio/mpeg">
-      Your browser does not support audio
-    </audio>
+    <iframe
+      width="0"
+      height="0"
+      src="https://www.youtube.com/embed/a9hghurnvhE?autoplay=1&loop=1&playlist=a9hghurnvhE"
+      title="Background Music"
+      frameborder="0"
+      allow="autoplay"
+      allow="encrypted-media"
+      style="display:none;">
+    </iframe>
+
 
     <script>
       const bgm = document.getElementById('bgm');
